--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
+  <%= csrf_meta_tags %>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
+  <%= javascript_include_tag "application" %>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <%= javascript_importmap_tags %>
+
+
 </head>
 
 <body>
@@ -33,15 +39,21 @@
       </ul>
       <% if user_signed_in? %>
         <!-- Код для зарегистрированного пользователя -->
-        <a class="btn btn-primary" <%= link_to 'Выйти', destroy_user_session_path, method: :delete  %></a>
-      <% else %>
+        <a href="/posts/new" class="btn btn-primary">Создать пост </a >
 
-        <a href="/users/sign_in" class="btn btn-primary" >Войти</a>
-        <a href="/users/sign_up" class="btn btn-dark">Регистрация</a>
+        <%= link_to("Выход", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: 'btn btn-primary') %>
+
+
+
+    <% else %>
+
+        <!-- a href="/users/sign_in" class="btn btn-primary" >Войти</a -->
+        <!-- a href="/users/sign_up" class="btn btn-dark">Регистрация</a -->
 
         <!-- Код для неавторизованного пользователя -->
-        <!-- %= link_to 'Вход', new_user_session_path % -->
-        <!-- %= link_to 'Регистрация', new_user_registration_path % -->
+        <%= link_to 'Вход', new_user_session_path, class: "btn btn-primary"%>
+
+        <%= link_to 'Регистрация', new_user_registration_path , class: "btn btn-dark" %>
       <% end %>
 
       <!-- div>
