bug with comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,84 +1,60 @@
-<!-- Post Content Column -->
 <%= javascript_include_tag "application" %>
-<%= javascript_include_tag  "turbo" ,type: "module" %>
+<%= javascript_include_tag "turbo", type: "module" %>
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-<!-- Ваш HTML-код для страницы с комментариями -->
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-    $(document).ready(function() {
-        $(".reply-button").on("click", function(e) {
-            e.preventDefault();
-            var commentId = $(this).data('comment-id');
-            $(".reply-form[data-comment-id='" + commentId + "']").toggle();
-        });
-    });
-</script>
-
 
 <div class="col-lg-8">
-
-  <!-- Title -->
   <h1 class="mt-4"><%= @post.title %></h1>
-
-  <!-- Author -->
-  <p class="lead">
-  </p>
-
+  <p class="lead"></p>
   <hr>
-
-  <!-- Date/Time -->
-
   <%= @post.body %>
-
   <hr>
-
-  <!-- Post Content -->
   <p><%= "Пост создан " + I18n.l(@post.created_at.to_time, :format => '%d %B %Y') %></p>
   <hr>
+  <h2>Комментарии:</h2>
+
+  <% @comments.each do |comment| %>
+    <div class="comment-container">
+      <div class="comment">
+        <p><strong><%= comment.user&.username %>:</strong> <%= comment.body %></p>
+        <% if comment.can_be_deleted_by?(current_user) %>
+          <%= link_to post_comment_path(@post, comment), method: :delete, data: { id: comment.id, turbo: true, turbo_method: :delete }, remote: true do %>
+            Удалить
+          <% end %>
+        <% end %>
+
+        <% if current_user.present? %>
+          <%= form_with(model: Comment.new, url: post_comments_path(@post)) do |form| %>
+            <%= form.text_area :body, placeholder: 'Ответить на комментарий' %>
+            <%= form.hidden_field :parent_id, value: comment.id %>
+            <%= form.submit 'Ответить на комментарий' %>
+          <% end %>
+        <% end %>
+
+        <% comment.replies.each do |reply| %>
+          <div class="reply">
+            <p><strong><%= reply.user&.username %>:</strong> <%= reply.body %></p>
+            <% if reply.can_be_deleted_by?(current_user) %>
+              <%= link_to post_comment_path(@post, reply), method: :delete, data: { id: reply.id, turbo: true, turbo_method: :delete }, remote: true do %>
+                Удалить ответ
+              <% end %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+
+  <!-- Форма для общего комментария -->
+  <% if current_user.present? %>
+    <%= form_with(model: Comment.new, url: post_comments_path(@post)) do |form| %>
+      <%= form.text_area :body, placeholder: 'Напишите комментарий' %>
+      <%= form.submit 'Отправить комментарий' %>
+    <% end %>
+  <% end %>
 
   <p>
     <% if current_user == @post.user %>
       <%= link_to "Удалить пост", post_path(@post), data: { turbo: true, turbo_method: :delete }, class: 'btn btn-danger' %>
     <% end %>
   </p>
-  <!-- Форма для создания комментария -->
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Отображение существующих комментариев -->
-
-
-
-
-
-
-
-  <!-- Отображение существующих комментариев -->
-
-
-  <h2>Комментарии:</h2>
-  <% @comments.each do |comment| %>
-    <p><strong><%= comment.creator.username %>:</strong> <%= comment.body %></p>
-    <%= form_with(model: Commontator::Comment.new, url: reply_to_comment_path(comment), method: :post) do |form| %>
-      <%= form.hidden_field :commontator_thread_id, value: comment.thread.id %>
-      <%= form.hidden_field :parent_id, value: comment.id %>
-    <% end %>
-  <% end %>
-
-  <%= form_with(model: Commontator::Comment.new, url: commontator.thread_comments_path(@post.commontator_thread)) do |form| %>
-    <%= form.hidden_field :commontator_thread_id, value: @post.commontator_thread.id %>
-    <%= form.text_area :body, placeholder: 'Напишите комментарий' %>
-    <%= form.submit 'Отправить комментарий' %>
-  <% end %>
-
-
 </div>
