--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+.reply {
+    margin-left: 30px; /* Пример отступа для ответов */
+}
+
+.comment-container {
+    margin-bottom: 10px; /* Пример отступа между комментариями */
+}
+
