--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -67,6 +67,9 @@
   <p>
     <% if current_user == @post.user %>
       <%= link_to "Удалить пост", post_path(@post), data: { turbo: true, turbo_method: :delete }, class: 'btn btn-danger' %>
+      <%= link_to "Редактировать пост", edit_post_path(@post), class: 'btn btn-primary' %>
+
     <% end %>
   </p>
+
 </div>
