--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,8 +14,8 @@
     <!-- Blog Post -->
     <div class="card mb-4">
       <div class="card-body">
-        <h2 class="card-title"><%= post.title %></h2>
-        <p class="card-text"><%= post.body.length <= 2000 ? post.body : post.body[0..200] %></p>
+        <h2 class="card-title"><%= post.title.truncate(200) %></h2>
+        <p class="card-text"><%= post.body.truncate(300) %></p>
         <a href="/posts/<%= post.id %>" class="btn btn-primary">Читать дальше &rarr;</a>
           <br>
 
