--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,14 +8,14 @@
 <div class="col-lg-8">
 
   <div class="title">
-    <h1 class="mt-4" style= "font-size: 24px; font-weight: bold; max-width: 1000px; margin-bottom: 10px; overflow-wrap: break-word;">
+    <h1 class="mt-4">
       <%= @post.title %>
     </h1>
   </div>
 
   <hr>
 
-  <div class="body" style="max-width: 1000px; overflow-wrap: break-word;">
+  <div class="body">
     <%= @post.body %>
   </div>
 
